@@ -398,6 +398,7 @@ if test "x$enable_examples" = "xyes"; then
           examples/book/treeview/popup/Makefile
           examples/book/treeview/filter/Makefile
           examples/book/treeview/filter_modify/Makefile
+          examples/book/treeview/modelsort/Makefile
         examples/book/update_ui/Makefile
       examples/calendar/Makefile
       examples/cellrenderercustom/Makefile
