@@ -1,3 +1,3 @@
-SUBDIRS = combo_renderer editable_cells list listviewtext tree drag_and_drop popup filter filter_modify
+SUBDIRS = combo_renderer editable_cells list listviewtext tree drag_and_drop popup filter filter_modify modelsort
 
 
