@@ -1,5 +1,16 @@
 2006-04-11  Murray Cumming  <murrayc@murrayc.com>
 
+	* configure.in:
+	* examples/book/treeview/Makefile.am:
+	* examples/book/treeview/modelsort/.cvsignore:
+	* examples/book/treeview/modelsort/Makefile.am:
+	* examples/book/treeview/modelsort/examplewindow.cc:
+	* examples/book/treeview/modelsort/examplewindow.h:
+	* examples/book/treeview/modelsort/main.cc: Added example of 
+	independently sorted model, with the TreeModelSort parent model. 
+
+2006-04-11  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/gtkmm/listviewtext.cc: Constructor: Use sprintf() instead of 
 	std::stringstream because it is smaller (code size) and faster.
 
